unpackaged/main/default/objects/ET_Vehicle_Quote_Item__c/ET_Vehicle_Quote_Item__c.object-meta.xml
<CustomObject>
    <label>Vehicle Quote Item</label>
    <nameField>
        <displayFormat>VQI-{0000}</displayFormat>
        <label>Vehicle Quote Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehicle Quote Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>