unpackaged/main/default/objects/ET_Vehicle_Quote_Item__c/fields/Annual_Fuel_Profit_Margin_Discounted__c.field-meta.xml
<CustomField>
    <fullName>Annual_Fuel_Profit_Margin_Discounted__c</fullName>
    <label>Annual Fuel Profit Margin %(Discounted)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>