unpackaged/main/default/objects/ET_Vehicle_Quote_Item__c/fields/Approval_Details__c.field-meta.xml
<CustomField>
    <fullName>Approval_Details__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Approval Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>