unpackaged/main/default/objects/ET_Vehicle_Quote_Item__c/fields/Basic_Tracking_Cost_Value__c.field-meta.xml
<CustomField>
    <fullName>Basic_Tracking_Cost_Value__c</fullName>
    <label>Basic Tracking Cost Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>