unpackaged/main/default/objects/ET_Vehicle_Quote_Item__c/fields/Corporate_Tax__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Tax__c</fullName>
    <label>Corporate Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>