unpackaged/main/default/objects/ET_Vehicle_Quote_Item__c/fields/Credit_Period__c.field-meta.xml
<CustomField>
    <fullName>Credit_Period__c</fullName>
    <formula>ET_Pricing_Vehicle_Request__r.Credit_Period__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Period</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>