unpackaged/main/default/objects/ET_Vehicle_Quote_Item__c/fields/Depreciation_Difference_to_other_Contrac__c.field-meta.xml
<CustomField>
    <fullName>Depreciation_Difference_to_other_Contrac__c</fullName>
    <formula>Current_Value_Remaining_Depreciation_of__c - (((Total_Depreciation__c* ET_Contract_Period__c) + Total_Resale_Value__c)* ET_Number_of_Vehicles__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Depreciation Difference other Contracts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>