unpackaged/main/default/objects/ET_Vehicle_Quote_Item__c/fields/Discounted_Vehicle_Profit_Value_Target__c.field-meta.xml
<CustomField>
    <fullName>Discounted_Vehicle_Profit_Value_Target__c</fullName>
    <label>Discounted Vehicle Profit Value(Target)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>