unpackaged/main/default/objects/ET_Vehicle_Quote_Item__c/fields/ET_Allowed_Vehicle_profit__c.field-meta.xml
<CustomField>
    <fullName>ET_Allowed_Vehicle_profit__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Allowed Vehicle profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>