unpackaged/main/default/objects/ET_Vehicle_Quote_Item__c/fields/ET_Annual_Fuel_Profit_Target_Prices__c.field-meta.xml
<CustomField>
    <fullName>ET_Annual_Fuel_Profit_Target_Prices__c</fullName>
    <label>Annual Fuel Profit(Target Prices)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>