unpackaged/main/default/objects/ET_Vehicle_Quote_Item__c/fields/ET_Client_Type__c.field-meta.xml
<CustomField>
    <fullName>ET_Client_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Client Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>