unpackaged/main/default/objects/ET_Vehicle_Quote_Item__c/fields/ET_Daily_Mileage__c.field-meta.xml
<CustomField>
    <fullName>ET_Daily_Mileage__c</fullName>
    <label>Daily Mileage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>