unpackaged/main/default/objects/ET_Vehicle_Quote_Item__c/fields/ET_Depreciation_Rate_for_Extra_Mileage__c.field-meta.xml
<CustomField>
    <fullName>ET_Depreciation_Rate_for_Extra_Mileage__c</fullName>
    <label>Depreciation Rate for Extra Mileage %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>