unpackaged/main/default/objects/ET_Vehicle_Quote_Item__c/fields/ET_Depreciation_Type__c.field-meta.xml
<CustomField>
    <fullName>ET_Depreciation_Type__c</fullName>
    <label>Depreciation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Percentage</fullName>
                <default>true</default>
                <label>Percentage</label>
            </value>
            <value>
                <fullName>Value</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>