unpackaged/main/default/objects/ET_Vehicle_Quote_Item__c/fields/ET_Extra_Bus_Fees__c.field-meta.xml
<CustomField>
    <fullName>ET_Extra_Bus_Fees__c</fullName>
    <label>Extra Bus Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>