unpackaged/main/default/objects/ET_Vehicle_Quote_Item__c/fields/ET_Fleet_Type__c.field-meta.xml
<CustomField>
    <fullName>ET_Fleet_Type__c</fullName>
    <label>Fleet Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ET Fleet</fullName>
            </value>
            <value>
                <fullName>Client Fleet</fullName>
            </value>
            <value>
                <fullName>Lease to Own</fullName>
            </value>
            <value>
                <fullName>Multiple</fullName>
            </value>
            <value>
                <fullName>Customer Fleet</fullName>
                <isActive>false</isActive>
                <label>Customer Fleet</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>