unpackaged/main/default/objects/ET_Vehicle_Quote_Item__c/fields/ET_Fuel_consumption__c.field-meta.xml
<CustomField>
    <fullName>ET_Fuel_consumption__c</fullName>
    <label>Fuel consumption</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>