unpackaged/main/default/objects/ET_Vehicle_Quote_Item__c/fields/ET_Fuel_Expenses__c.field-meta.xml
<CustomField>
    <fullName>ET_Fuel_Expenses__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Fuel Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>