unpackaged/main/default/objects/ET_Vehicle_Quote_Item__c/fields/ET_Fuel_Required__c.field-meta.xml
<CustomField>
    <fullName>ET_Fuel_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fuel Required</label>
    <type>Checkbox</type>
</CustomField>