unpackaged/main/default/objects/ET_Vehicle_Quote_Item__c/fields/ET_Line_Number__c.field-meta.xml
<CustomField>
    <fullName>ET_Line_Number__c</fullName>
    <label>Line Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>