unpackaged/main/default/objects/ET_Vehicle_Quote_Item__c/fields/ET_Maintenance_Reserve__c.field-meta.xml
<CustomField>
    <fullName>ET_Maintenance_Reserve__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Maintenance Reserve</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>