unpackaged/main/default/objects/ET_Vehicle_Quote_Item__c/fields/ET_Manufacture_Year__c.field-meta.xml
<CustomField>
    <fullName>ET_Manufacture_Year__c</fullName>
    <label>Vehicle Manufacture Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>