unpackaged/main/default/objects/ET_Vehicle_Quote_Item__c/fields/ET_No_of_Seats__c.field-meta.xml
<CustomField>
    <fullName>ET_No_of_Seats__c</fullName>
    <label>No.of Seats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>