unpackaged/main/default/objects/ET_Vehicle_Quote_Item__c/fields/ET_Number_of_Financing_years__c.field-meta.xml
<CustomField>
    <fullName>ET_Number_of_Financing_years__c</fullName>
    <label>No of Financing Years</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>