unpackaged/main/default/objects/ET_Vehicle_Quote_Item__c/fields/ET_Number_of_Vehicles__c.field-meta.xml
<CustomField>
    <fullName>ET_Number_of_Vehicles__c</fullName>
    <label>Number of Vehicles</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>