unpackaged/main/default/objects/ET_Vehicle_Quote_Item__c/fields/ET_other_cost__c.field-meta.xml
<CustomField>
    <fullName>ET_other_cost__c</fullName>
    <label>other cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>