unpackaged/main/default/objects/ET_Vehicle_Quote_Item__c/fields/ET_Policy_Type__c.field-meta.xml
<CustomField>
    <fullName>ET_Policy_Type__c</fullName>
    <label>Policy Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pricing Policy</fullName>
            </value>
            <value>
                <fullName>Target Prices</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>