unpackaged/main/default/objects/ET_Vehicle_Quote_Item__c/fields/ET_Pricing_Type__c.field-meta.xml
<CustomField>
    <fullName>ET_Pricing_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Pricing Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>