unpackaged/main/default/objects/ET_Vehicle_Quote_Item__c/fields/ET_Pricing_Vehicle_Request__c.field-meta.xml
<CustomField>
    <fullName>ET_Pricing_Vehicle_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pricing Vehicle Request</label>
    <referenceTo>Vehicle__c</referenceTo>
    <relationshipLabel>Vehicle Quote Items</relationshipLabel>
    <relationshipName>Vehicle_Quote_Items</relationshipName>
    <type>Lookup</type>
</CustomField>