unpackaged/main/default/objects/ET_Vehicle_Quote_Item__c/fields/ET_Total_Reserve_Cost__c.field-meta.xml
<CustomField>
    <fullName>ET_Total_Reserve_Cost__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Reserve Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>