unpackaged/main/default/objects/ET_Vehicle_Quote_Item__c/fields/ET_Total_Vehicle_Vat_cost__c.field-meta.xml
<CustomField>
    <fullName>ET_Total_Vehicle_Vat_cost__c</fullName>
    <formula>ET_VAT_Cost_on_Direct_Expenses__c +  ET_VAT_Cost_on_Indirect_Expenses__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Vehicle Vat cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>