unpackaged/main/default/objects/ET_Vehicle_Quote_Item__c/fields/ET_Vat_Amount__c.field-meta.xml
<CustomField>
    <fullName>ET_Vat_Amount__c</fullName>
    <label>Vat Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>