unpackaged/main/default/objects/ET_Vehicle_Quote_Item__c/fields/ET_VAT_Cost_on_Indirect_Expenses__c.field-meta.xml
<CustomField>
    <fullName>ET_VAT_Cost_on_Indirect_Expenses__c</fullName>
    <label>VAT Cost on Indirect Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>