unpackaged/main/default/objects/ET_Vehicle_Quote_Item__c/fields/ET_Vat_Rate__c.field-meta.xml
<CustomField>
    <fullName>ET_Vat_Rate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vat Rate</label>
    <length>200</length>
    <type>Text</type>
</CustomField>