unpackaged/main/default/objects/ET_Vehicle_Quote_Item__c/fields/ET_Vehicle_Condition__c.field-meta.xml
<CustomField>
    <fullName>ET_Vehicle_Condition__c</fullName>
    <formula>text(ET_Pricing_Vehicle_Request__r.ET_Vehicle_Condition__c)</formula>
    <label>Vehicle Condition</label>
    <type>Text</type>
</CustomField>