unpackaged/main/default/objects/ET_Vehicle_Quote_Item__c/fields/ET_Vehicle_Depreciation__c.field-meta.xml
<CustomField>
    <fullName>ET_Vehicle_Depreciation__c</fullName>
    <defaultValue>&#39;0&#39;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Vehicle Depreciation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>