unpackaged/main/default/objects/ET_Vehicle_Quote_Item__c/fields/ET_Vehicle_Depreciation_Percentage__c.field-meta.xml
<CustomField>
    <fullName>ET_Vehicle_Depreciation_Percentage__c</fullName>
    <label>Vehicle Depreciation Rate %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>