unpackaged/main/default/objects/ET_Vehicle_Quote_Item__c/fields/ET_Vehicle_Financing__c.field-meta.xml
<CustomField>
    <fullName>ET_Vehicle_Financing__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Vehicle Financing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>