unpackaged/main/default/objects/ET_Vehicle_Quote_Item__c/fields/ET_Vehicle_Fuel_Rate__c.field-meta.xml
<CustomField>
    <fullName>ET_Vehicle_Fuel_Rate__c</fullName>
    <label>Vehicle Fuel Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>