unpackaged/main/default/objects/ET_Vehicle_Quote_Item__c/fields/ET_Vehicle_Original_Purchase_Price__c.field-meta.xml
<CustomField>
    <fullName>ET_Vehicle_Original_Purchase_Price__c</fullName>
    <label>Vehicle Original Purchase Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>