unpackaged/main/default/objects/ET_Vehicle_Quote_Item__c/fields/ET_Vehicle_Resale_Value__c.field-meta.xml
<CustomField>
    <fullName>ET_Vehicle_Resale_Value__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vehicle Resale Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>