unpackaged/main/default/objects/ET_Vehicle_Quote_Item__c/fields/ET_Vehicle_Source__c.field-meta.xml
<CustomField>
    <fullName>ET_Vehicle_Source__c</fullName>
    <label>Vehicle Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pricing_Vehicle_Source</valueSetName>
    </valueSet>
</CustomField>