unpackaged/main/default/objects/ET_Vehicle_Quote_Item__c/fields/ET_Working_days_per_week__c.field-meta.xml
<CustomField>
    <fullName>ET_Working_days_per_week__c</fullName>
    <label>Working days per week</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>