unpackaged/main/default/objects/ET_Vehicle_Quote_Item__c/fields/Financial_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Financial_Analysis__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Financial Analysis</label>
    <referenceTo>Financial_Analysis__c</referenceTo>
    <relationshipLabel>Vehicle Quote Items</relationshipLabel>
    <relationshipName>Vehicle_Quote_Items</relationshipName>
    <type>Lookup</type>
</CustomField>