unpackaged/main/default/objects/ET_Vehicle_Quote_Item__c/fields/Fuel_Profit_Value_Discounted__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Profit_Value_Discounted__c</fullName>
    <label>Fuel Profit Value(Discounted)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>