unpackaged/main/default/objects/ET_Vehicle_Quote_Item__c/fields/General_Reserve_Target_Prices__c.field-meta.xml
<CustomField>
    <fullName>General_Reserve_Target_Prices__c</fullName>
    <label>General Reserve Target Prices</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>