unpackaged/main/default/objects/ET_Vehicle_Quote_Item__c/fields/is_Target_Price_Required__c.field-meta.xml
<CustomField>
    <fullName>is_Target_Price_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will be true, when Target Price is Required by Customer</description>
    <label>is Target Price Required</label>
    <type>Checkbox</type>
</CustomField>