unpackaged/main/default/objects/ET_Vehicle_Quote_Item__c/fields/Is_trailer_selected__c.field-meta.xml
<CustomField>
    <fullName>Is_trailer_selected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is trailer selected</label>
    <type>Checkbox</type>
</CustomField>