unpackaged/main/default/objects/ET_Vehicle_Quote_Item__c/fields/num__c.field-meta.xml
<CustomField>
    <fullName>num__c</fullName>
    <formula>ET_Number_of_Vehicles__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>num</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>