unpackaged/main/default/objects/ET_Vehicle_Quote_Item__c/fields/Opportunity_Sector__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Sector__c</fullName>
    <formula>TEXT(Quote__r.Opportunity.ETSALES_Sector__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Sector</label>
    <type>Text</type>
</CustomField>