unpackaged/main/default/objects/ET_Vehicle_Quote_Item__c/fields/Refrigerator_Depreciation__c.field-meta.xml
<CustomField>
    <fullName>Refrigerator_Depreciation__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Refrigerator Depreciation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>