unpackaged/main/default/objects/ET_Vehicle_Quote_Item__c/fields/Refrigerator_min_Resale_Value_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Refrigerator_min_Resale_Value_Percentage__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Refrigerator min Resale Value Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>