unpackaged/main/default/objects/ET_Vehicle_Quote_Item__c/fields/Refrigerator_Remaining_Depreciation_Of_1__c.field-meta.xml
<CustomField>
    <fullName>Refrigerator_Remaining_Depreciation_Of_1__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Refrigerator Remaining Depreciation Of 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>