unpackaged/main/default/objects/ET_Vehicle_Quote_Item__c/fields/Refrigerator_Resale_Value__c.field-meta.xml
<CustomField>
    <fullName>Refrigerator_Resale_Value__c</fullName>
    <defaultValue>&#39;0&#39;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Refrigerator Resale Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>